Bug 374471 Make the noautohide attribute live where supported r=enndeakin